complete first test * add basic styling

--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,3 +1,52 @@
-<div class="">
-  idea-box
+<div class="title">sɐǝpl</div>
+<div class="circle ideas">
+  <table>
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Body</th>
+        <th>Quality</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>blah</td>
+        <td>fwee</td>
+        <td>spoon</td>
+      </tr>
+      <tr>
+        <td>blah</td>
+        <td>fwee</td>
+        <td>spoon</td>
+      </tr>
+      <tr>
+        <td>blah</td>
+        <td>fwee</td>
+        <td>spoon</td>
+      </tr>
+      <tr>
+        <td>blah</td>
+        <td>fwee</td>
+        <td>spoon</td>
+      </tr>
+      <tr>
+        <td>blah</td>
+        <td>fwee</td>
+        <td>spoon</td>
+      </tr>
+      <tr>
+        <td>blah</td>
+        <td>fwee</td>
+        <td>spoon</td>
+      </tr>
+      <tr>
+        <td>blah</td>
+        <td>fwee</td>
+        <td>spoon</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
+<!-- <div class="ideas">
+
+</div> -->
