--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -9,10 +9,10 @@
       </tr>
     </thead>
     <tbody>
-      <% @ideas.each do |idea| %>
+      <% @ideas.all.each do |idea| %>
         <tr data-id="idea_<%= idea.id %>">
           <td><%= idea.title %></td>
-          <td><%= idea.body %></td>
+          <td><%= limit_body(idea.body) %></td>
           <td><%= idea.quality %></td>
         </tr>
       <% end %>
