uder successfully creates new idea * upon creation, text field is emptied * idea is appended to list of previously existing ideas

--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -28,7 +28,8 @@
   <%= text_field_tag(:title, "", id: "title") %>
   <br>
   <br>
-  <%= label_tag(:body, "description: ") %>
+  <%= label_tag(:body, "body: ") %>
+  <br>
   <%= text_field_tag(:body, "", id: "body") %>
   <input type="hidden" name="date" id="lesson_date">
   <br>
