add delete idea ajax method * add event listener to anything with 'remove' class * on 'click' make delete call to ineranl api, passing the chosen idea's data-is

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,6 +28,17 @@
    overflow: scroll !important;
 }
 
+.remove {
+  background-color: transparent;
+  color: #750a35;
+  border: none;
+  font-size: 28px;
+}
+
+p {
+  font-size: 16px;
+}
+
 .new-idea {
   background-color: #87b7b8;
   font-family: Sans-serif;
