--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -10,7 +10,7 @@
     </thead>
     <tbody class="ideas">
       <% @ideas.all.each do |idea| %>
-        <tr data-id="idea_<%= idea.id %>">
+        <tr id="idea_<%= idea.id %>">
           <td><%= idea.title %></td>
           <td><%= limit_body(idea.body) %></td>
           <td><%= idea.quality %></td>
