--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,6 +35,13 @@
   font-size: 28px;
 }
 
+.qual {
+  background-color: transparent;
+  border: none;
+  color: white;
+  display: inline-block;
+}
+
 p {
   font-size: 16px;
 }
@@ -75,9 +82,14 @@ p {
 
  td {
    border-top: solid white 1px;
-   padding-left: 23px;
+  //  padding-left: 23px;
  }
 
  td:first-child {
    border-left: none;
+ }
+
+ th {
+  text-align: left;
+  padding-left: 5px;
  }
