--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -13,7 +13,7 @@
         <tr id="idea_<%= idea.id %>">
           <td><%= idea.title %></td>
           <td><%= limit_body(idea.body) %></td>
-          <td data-id="<%= idea.id %>"><button class="quality-down qual">◀︎</button><%= idea.quality %><button class="quality-up qual">▶︎</button></td>
+          <td class="quality"><button class="quality-down qual" data-id="<%= idea.id %>">◀︎</button><%= idea.quality %><button class="quality-up qual" data-id="<%= idea.id %>">▶︎</button></td>
           <td>
             <button class="remove" data-id="<%= idea.id %>">● <p style="display:none">remove</p></button>
           </td>
