--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -11,8 +11,8 @@
     <tbody class="ideas">
       <% @ideas.all.each do |idea| %>
         <tr id="idea_<%= idea.id %>">
-          <td class="edit" id="edit-title-<%= idea.id %>" data-id="<%= idea.id %>"><%= idea.title %></td>
-          <td class"edit-body" data-id="<%= idea.id %>"><%= limit_body(idea.body) %></td>
+          <td class="edit-title" id="edit-title-<%= idea.id %>" data-id="<%= idea.id %>"><%= idea.title %></td>
+          <td class"edit-bod" id="edit-body-<%= idea.id %>" data-id="<%= idea.id %>"><%= limit_body(idea.body) %></td>
           <td class="quality"><button class="quality-down qual" data-id="<%= idea.id %>">◀︎</button><%= idea.quality %><button class="quality-up qual" data-id="<%= idea.id %>">▶︎</button></td>
           <td>
             <button class="remove" data-id="<%= idea.id %>">● <p style="display:none">remove</p></button>
